Update build script and readme